# image_nest

./: .gitignore  pyproject.toml  settings.ini
src/image_nest/: main.py
src/image_nest/application/image_screening/: image_screening_session.py
src/image_nest/application/settings/: app_settings.py  settings_repository.py
src/image_nest/presentation/: image_screening_page.py  main_window.py  settings_dialog.py
