[project]
name = "image-nest"
version = "0.1.0"
description = "A desktop app for manage and view images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.8.3",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[project.scripts]
image-nest = "image_nest.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
